2024-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Don't suppress internal sentinel.
	(tramp-test32-shell-commanddirect-async): Don't tag it :unstable.

2024-05-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (comp-warn-primitives): Declare.
	(tramp-test18-file-attributes): Use it.

2024-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Add "kubernetes",
	"run0" and "nspawn".
	(tramp--test-toolbox-p): New defun.
	(tramp-test45-asynchronous-requests): Use it.
	(tramp--test-check-files): Adapt regexp.

2024-05-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Use connection-local-variable `tramp-direct-async-process'.

2024-05-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test03-file-name-defaults)
	(tramp-test03-file-name-host-rules): Extend tests.

2024-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Add "apptainer".
	(tramp--test-supports-processes-p): Extend function.

2024-02-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-container-p): Adapt.
	(tramp--test-container-oob-p): New defun.
	(tramp-test17-dired-with-wildcards, tramp-test35-remote-path)
	(tramp-test41-special-characters): Use it.
	(tramp--test-set-ert-test-documentation): Use `split-string'.

2024-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-set-ert-test-documentation): New defun.
	(tramp--test-deftest-with-stat, tramp--test-deftest-with-perl)
	(tramp--test-deftest-with-ls): Use it to define docstring.

2024-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-archive-tests.el (tramp-archive-test-file-archive)
	(tramp-archive-test-archive): Don't use `defconst` if it's not
	constant.

	* tramp-tests.el (tramp--test-instrument-test-case)